# workana-scraping

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: bot_telegram.md  doubts.md  references.md  scrap_workana.md  transform_data.md
notebooks/: analysis.ipynb  bot_telegram.ipynb  scrap_workana_all_jobs.ipynb  scrap_workana_one_job.ipynb  scrap_workana_one_page.ipynb  transform_data.ipynb
tests/: telegram_test.py  workana_all_test.py  workana_one_test.py  workana_page_test.py
workana_scraping/: app.py  bot_telegram.py  clear.py  scrapper.py  workana_scrap.py
workana_scraping/data/: data_raw.csv  data_t.csv  one_job.csv  one_page.csv
workana_scraping/data/performance/: p_page.csv  p_script.csv  performance.csv
